# diabet

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  generateDocumentationAndDeploy.sh
Classes/: AppDelegate.cpp  AppDelegate.h  HelloWorldScene.cpp  HelloWorldScene.h
doc/: CMakeLists.txt  Doxyfile  Doxyfile.in
proj.android/: .cproject  .gitignore  .project  AndroidManifest.xml  build.xml
proj.android-studio/: settings.gradle
proj.android-studio/app/: AndroidManifest.xml  build.gradle
proj.android-studio/app/res/values/: strings.xml
proj.android/res/values/: strings.xml
proj.ios_mac/: .gitignore
proj.ios_mac/Diabet.xcodeproj/: project.pbxproj
proj.ios_mac/DiabetTest/: SimpleTest.cpp
proj.ios_mac/GTest/: GTest.h
proj.ios_mac/ios/: Diabet-mobileGTest.plist
proj.ios_mac/mac/: Info.plist
proj.tizen/: .project  tizen-manifest.xml
proj.win10/: Diabet.sln
proj.win10/App/: Diabet.vcxproj  Diabet.vcxproj.filters  Package.appxmanifest
proj.win32/: .gitignore  Diabet.sln
proj.win8.1-universal/: Diabet.sln
proj.win8.1-universal/App.Shared/: Diabet.Shared.vcxitems
proj.win8.1-universal/App.Windows/: Diabet.Windows.vcxproj  Diabet.Windows.vcxproj.filters  Package.appxmanifest
proj.win8.1-universal/App.WindowsPhone/: Diabet.WindowsPhone.vcxproj  Package.appxmanifest
scripts/: build_and_run_mac_os.sh  build_and_run_tests.sh  build_and_run_tests_mac_os.sh  build_resources.sh  build_test.sh  build_xcode.sh  install_cmake.sh  prepare_for_mac.sh
unit_tests/: CMakeLists.txt  SimpleTest.h  main.cpp
